fix(ui): UI::Username modal broken in iPhone SE 1st gen (#564)
* fix(ui): fix input cursor caret display wrong position

* fix(ui): lock page has less zindex than alert

* fix(ui): fix onboarding UI of small device

---------

--- a/src/ui/pages/LockPage/LockPage.scss
+++ b/src/ui/pages/LockPage/LockPage.scss
@@ -1,5 +1,6 @@
 .lock-page {
   display: flex !important;
+  z-index: 2147483647; // max value
 
   &.hide {
     .responsive-page-content,
@@ -28,4 +29,8 @@
   .lock-page-title {
     margin-top: 4rem;
   }
+}
+
+.alert-forgotten {
+  z-index: 2147483647 !important; // max value
 }
