--- a/src/ui/pages/VerifySeedPhrase/VerifySeedPhrase.scss
+++ b/src/ui/pages/VerifySeedPhrase/VerifySeedPhrase.scss
@@ -31,6 +31,10 @@
         & > .paragraph-top {
           margin: 0.2rem 0;
         }
+
+        .page-footer {
+          margin-bottom: 0.5rem;
+        }
       }
     }
   }
